Style.css
*{
        font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

nav{
    padding: 10px 0;
    display: flex;
    justify-content: space-between;
}
.logo{
    width: 120px;
    height: 90px;
}

nav ul li{
    display: inline-block;
    margin: 10px 15px;
}

nav ul li a{
    text-decoration: none;
    color: #0844de;
    font-weight: 400;
    margin: 10px 15px;  
}
.content-1{
    color: rgb(9, 9, 9);
    font-size:small;
    font-weight: 50;
    margin-left: 2%;
}

.content-2{
    color: rgb(156, 145, 145);
    font-size:small;
    font-weight: 300;
    margin-left: 2%;
}
/* form code reference https://pagedart.com/blog/how-to-add-a-search-bar-in-html/#html-form */

form {
  
  border-radius: 10px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

  .MapImage {
    margin-left: 2%;
    width: 30px;
    height: 50px;
    border-top-left-radius: 75px;
    border-bottom-left-radius: 75px;
  }
  
/* button code learned from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_round_buttons */
 /* search button curve is learned from https://stackoverflow.com/questions/52194355/css-buttons-rounded-on-one-side */
  button {
    width: 100px;
    height: 50px;
    background-color: #6584f4;
    border: none;
    color: white;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin: 4px 2px;
    border-left: none;
    border-top-right-radius: 50px;
    border-bottom-right-radius: 50px;
  }
  
  input[type=search], select {
    width: 16%;
    height: 50px;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 3px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
  }
  .FilterText{
    margin-left: 2%;
    font-size: small;
  }

  #FilterImages {
   padding-left: 2%;
    display:flex;
    flex-wrap: wrap;
}

#FilterImages img {
    width: 3%;
}

input[name=username], select {
    width: 16%;
    height: 50px;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 3px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
  }
  
  .searchresultsicon{
    padding-top: 1%;
    margin-left: 1%;
    width: 1.5%;   
  }
  
  p{
    color: rgb(156, 145, 145);
    font-size:large;
    font-weight: 300;
    margin-left: 2%;
    text-wrap:nowrap;
    text-align:left;
  }
  /* Grid -1 code learned fromhttps://www.youtube.com/watch?v=Pip8s2BpelM  */

#FirstGridSection{
    display: flex;
    max-width: 60%;
    padding: 3%;
    border-radius: 5%;
    margin-left: 3%;
    background-color:rgba(102, 86, 86, 0.089); */
         }
#FirstGridSection > div {
    border: 2px solid #e7dbdb;
    height: 360px;
    border-radius: 20px;
    border-color: rgba(98, 187, 205, 0.51);
    background-color: white;
        }
   
#FirstGridSection > div>img{
        padding: 5%;
        width: 96%;
        height: 65%;
        border-radius: 20%;
}
.FirstGridBelowImageFirstRow{
  font-size:2%; 
  text-align: left;
}

#FirstGridSection > div > p{
  font-size: 3;
  text-align: left;
  padding: 1%;

}
#FirstGridSection{
  float:left;
}

/* Grid -2 code learned from https://www.youtube.com/watch?v=Pip8s2BpelM  */

#SecondGridSection{
    display: flex;
    flex-direction: column;
    /* margin-left: 3%; */
    background-color:rgba(102, 86, 86, 0.089); 
    max-width: 25%;
    border-radius: 20px;
    margin-bottom: 3%;
         }
        
#SecondGridSection > div {
    /* margin-top: 5%;
    margin-left: 5%; */
    margin:4%;
    border: 2px solid #efe5e5;
    height: 100px;
    max-width: 90%;
    border-radius: 10%;
    background-color:white; 
    border-color: rgba(98, 187, 205, 0.51);

        }
#SecondGridSection > div> img{
    padding: 5%;
    width: 50%;
    height: 100%;
    border-radius: 10%;
    float: left;
}

#SecondGridSection{
  float:right;
  margin-right: 2%;
  }

  #SecondGridSection > div > p{
    font-size: 0.5;
    text-align: right;
    padding: 3%;
}
/* The following section written separately because it requires different font */
.SecondGridBelowImageFirstRow{
  font-size:2%; 
  text-align: left;
}

  /* Grid -3 */
  /* Use flex box. Recommended */
.ThirdGridContainer{
    display: flex;
    padding: 12px 20px;
    /* background-size: 40px 40px; */
    height:100%;
    width: 100%;
    /* align-items: stretch; */
    /* background-image:
    linear-gradient(to right, grey 1px, transparent 1px),
    linear-gradient(to bottom, grey 1px, transparent 1px);   */
    
  }
  
 
  .ColumnOne,.ColumnTwo,.ColumnThree,.ColumnFour {
    width: 100%;
    display: flex;

  }

 
  .ColumnTwo,.ColumnFour
  {
    display:flex;
    flex-direction: column;
      }
  
   .bottomimage-1,.bottomimage-2,.bottomimage-3,.bottomimage-4,.bottomimage-5,.bottomimage-6{
    display: flex;
    width: 100%;
    border-radius: 10%;
    height: 100%;
  } 
  
  
    /* Footer section learned from here 
    https://devdevout.com/css/css-footers*/
        
    *, *:before, *:after {
      box-sizing: border-box;
      gap: 20px;
    }
    
    /* html {
      font-size: 100%;
    } */
    /* use flexbox for footer as well is recommended by mentor */
   
    .footer {
      font-family: acumin-pro, system-ui, sans-serif;
      margin: 0;
      display: flexbox;
      font-size: 14px;
      background-color: #f4f4f4;
      align-items: start;
      /* min-height: 100vh; */
    }
    .footer > * {
      flex:  1 100%;
    }
    
    .nav__title {
      font-weight: 400;
      font-size: 15px;
    }
    
    .footer ul {
      list-style: none;
      padding-left: 0;
    }
    
    .footer li {
      line-height: 2em;
    }
    
    .footer a {
      text-decoration: none;
    }
    
    .footer__nav {
      display: flex;
      flex-flow: row wrap;
      margin-left: 5%;
    }
    
    .footer__nav > * {
      flex: 1 50%;
      margin-right: 1.25em;
    }
    
    .nav__ul a {
      color: #999;
    }
    
    .nav__ul--extra {
      column-count: 1;
      column-gap: 1.25em;
    }
    
    @media screen and (min-width: 40.375em) {
      .footer__nav > * {
        flex: 1;
      }

      .footer__addr {
        flex: 1 0px;
      }
      
      .footer__nav {
        flex: 2 0px;
      }
    }   

